FIx Khan Academy mobile overflows

--- a/Khan-Academy/css/index.css
+++ b/Khan-Academy/css/index.css
@@ -411,7 +411,6 @@ main > section:nth-of-type(1) {
 	max-width: 1200px;
 	overflow: auto;
 	margin: auto;
-	margin-top: 5rem;
 	position: relative;
 }
 
@@ -434,7 +433,7 @@ main > section:nth-of-type(1) > svg:nth-of-type(2) {
 
 main > section:nth-of-type(1) > div {
 	float: left;
-	width: 45%;
+	width: 100%;
 }
 main > section:nth-of-type(1) > div > svg{
 	display: none;
@@ -465,7 +464,7 @@ main > section:nth-of-type(1) > div > h1 {
 
 	main > section:nth-of-type(1) > div {
 		float: none;
-		width: 65%;
+		width: 75%;
 		margin-top: 33vh;
 	}
 	main > section:nth-of-type(1) > div > svg{
@@ -475,6 +474,9 @@ main > section:nth-of-type(1) > div > h1 {
 	main > section:nth-of-type(1) > div > h1 {
 		position: relative;
 		font-size: 30px;
+	}
+	main > section:nth-of-type(1) > div nav {
+		width: 100vw;
 	}
 }
 
@@ -618,8 +620,8 @@ main > section:nth-of-type(3) > svg {
 }
 
 main > section:nth-of-type(3) > div {
-	margin-left: 3rem;
-	margin-bottom: 3rem;
+	margin-left: 5%;
+	margin-bottom: 5%;
 }
 
 @media (max-width: 800px) {
@@ -704,6 +706,13 @@ main section:nth-of-type(3) p + a:is(:hover, :focus, :active) {
 }
 
 
+
+@media (max-width: 800px) {
+	main > section:nth-of-type(3) p {
+		max-width: 90vw;
+	}
+}
+
 main > section:nth-of-type(4) {
 	max-width: 1200px;
 	overflow: hidden;
@@ -720,7 +729,7 @@ main > section:nth-of-type(4) > div {
 	float: left;
 	width: 45%;
 	margin-left: 1rem;
-	height: 28rem;
+	padding-bottom: 5%;
 	overflow: hidden;
 }
 
@@ -767,7 +776,7 @@ main > section:nth-of-type(4) > div > h2 svg {
 
 
 main > section:nth-of-type(4) p {
-	width: 24rem;
+	max-width: 90vw;
 	margin-top: 0;
 	font-family: 'Lato', sans-serif;
 	font-size: 18px;
@@ -829,9 +838,9 @@ main > section:nth-of-type(5) > object {
 }
 
 main > section:nth-of-type(5) > div {
-	margin-left: 3rem;
-	margin-top: 3rem;
-	margin-bottom: 3rem;
+	margin-left: 5%;
+	margin-top: 5%;
+	margin-bottom: 5%;
 }
 
 @media (max-width: 800px) {
@@ -991,6 +1000,9 @@ main > section:nth-of-type(7) > div {
 	main > section:nth-of-type(7) > div {
 		float: none;
 		width: auto;
+	}
+	main > section:nth-of-type(5) p {
+		max-width: 90vw;
 	}
 }
 
